fix: adjust breakpoint to avoid image getting too narrow

--- a/src/containers/CaseStudyView/CaseStudyView.module.scss
+++ b/src/containers/CaseStudyView/CaseStudyView.module.scss
@@ -187,7 +187,9 @@
   .CaseStudyColumnImageContainer {
     margin-top: var(--s5);
   }
+}
 
+@media screen and (max-width: 450px) {
   .ColumnSmall {
     min-width: 160px;
   }
